Adds role management to angular backoffice
